Add error message disappear functionality on keypress using javascript

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -33,7 +33,8 @@
 			{% endblock %}	
 		</div>
 	</div>
-
+<script src="https://code.jquery.com/jquery.min.js"></script>
+<script src="/static/list.js"></script>
 
 </body>
 </html>
